Use my awesome css skills to fix tiny layout issues

--- a/css/ds.admin.css
+++ b/css/ds.admin.css
@@ -36,7 +36,7 @@
   width: 130px;
 }
 
-.ds-select-layout {
+.ds-after-suggestion{
   clear: both;
   padding-top: 10px;
 }
